feat: add static KQL↔JSON converter webapp with live sync and dark theme

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>KQL ⇄ JSON Converter</title>
+  <title>KQL JSON Converter</title>
   <link rel="stylesheet" href="style.css">
   <meta name="description" content="KQL to JSON and JSON to KQL converter - static, GitHub Pages compatible">
   </head>
@@ -11,7 +11,7 @@
   <header>
     <h1>KQL ⇄ JSON Converter</h1>
     <div class="controls">
-      <label><input id="liveSync" type="checkbox"> Live sync</label>
+      <label><input id="liveSync" type="checkbox" checked> Live sync</label>
     </div>
   </header>
 
